--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,12 @@
 doctype html
 html
   head
-    meta(charset='utf-8')
-    title=サイトサービス利用規約
+    title= title
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    link(href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css', rel='stylesheet', media='screen')
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body(style="font-size: 62.5%")
+  body
     block content
+
+  script(src='http://code.jquery.com/jquery.js')
+  script(src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
