implement the code's information page

--- a/views/login.jade
+++ b/views/login.jade
@@ -7,7 +7,7 @@ block content
         br
         a(href='/auth/facebook') login with facebook
         br
-        form(role='form', action="/login",method="post", style='max-width: 300px;')
+        form(role='form', action="/user/login",method="post", style='max-width: 300px;')
             .form-group
                 input.form-control(type='text', name="email", placeholder='Enter email')
             .form-group
