--- a/views/term.jade
+++ b/views/term.jade
@@ -6,5 +6,5 @@ block content
         br
         a(href="/term/register") Register
     if (term)
-        p You are currently logged in as #{term.tid}
+        p You are currently logged in as #{term._id}
         a(href="/term/logout") Logout
