--- a/views/termLogin.jade
+++ b/views/termLogin.jade
@@ -2,10 +2,10 @@ extends layout
 
 block content
     .container
-        h1 端末登録
+        h1 端末ログイン
         form(role='form', action="/term/login",method="post", style='max-width: 300px;')
             .form-group
-                input.form-control(type='text', name="tid")
+                input.form-control(type='text', name="_id")
             .form-group
                 input.form-control(type='pw', name="pw")
             button.btn.btn-default(type='submit') Submit
