--- a/views/termReg.jade
+++ b/views/termReg.jade
@@ -5,7 +5,7 @@ block content
         h1 端末登録
         form(role='form', action="/term/register",method="post", style='max-width: 300px;')
             .form-group
-                input.form-control(type='text', name="tid")
+                input.form-control(type='text', name="_id")
             .form-group
                 input.form-control(type='pw', name="pw")
             button.btn.btn-default(type='submit') Submit
