--- a/views/login.jade
+++ b/views/login.jade
@@ -1,17 +1,13 @@
 extends layout
 
 block content
-    .container
-        h1 Login Page
-        a(href='/auth/twitter') login with twitter
+    a(href='/auth/twitter') login with twitter
+    br
+    a(href='/auth/facebook') login with facebook
+    br
+    form(action="/user/login", method="post")
+        input(type='text', name="email", placeholder='Enter email')
         br
-        a(href='/auth/facebook') login with facebook
+        input(type='password', name="pw", placeholder='Password')
         br
-        form(role='form', action="/user/login",method="post", style='max-width: 300px;')
-            .form-group
-                input.form-control(type='text', name="email", placeholder='Enter email')
-            .form-group
-                input.form-control(type='pw', name="pw", placeholder='Password')
-            button.btn.btn-default(type='submit') Submit
-        a(href='/')
-        button.btn.btn-primary(type="button") Cancel
+        button(type='submit') Submit
