--- a/views/termReg.jade
+++ b/views/termReg.jade
@@ -1,13 +1,13 @@
 extends layout
 
 block content
-    .container
-        h1 端末登録
-        form(role='form', action="/term/register",method="post", style='max-width: 300px;')
-            .form-group
-                input.form-control(type='text', name="_id")
-            .form-group
-                input.form-control(type='pw', name="pw")
-            button.btn.btn-default(type='submit') Submit
-        a(href='/')
-        button.btn.btn-primary(type="button") Cancel
+    form(action="/term/register", method="post")
+        input(type='text', name="_id", placeholder='tid')
+        br
+        input(type='password', name="pw", placeholder='Password')
+        br
+        input(type='text', name="name", placeholder='name')
+        br
+        input(type='url', name="homeURL", placeholder='home URL')
+        br
+        button(type='submit') Submit
